feat: add assigning users to task
